Adder docker image to weather_service
